# boxfiles

./: .gitignore  .tool-versions  README.md  TODO.md  ansible.cfg  lib.sh  pull.sh  pyproject.toml  requirements.yml  run.sh  setup_darwin_x86.sh  setup_linux_x64_fedora.sh
inventory/: home-server.yaml  inventory  keech-laptop.yaml
inventory/group_vars/all/: boxfiles.yaml
inventory/host_vars/keech.local/: ansible.yml
inventory/host_vars/openmediavault.local/: ansible.yml
playbooks/: debug.yml  galaxy.yml  home-server.yml  personal.yml  server-home-automation.yml  work.yml  workstation-darwin.yml  workstation-linux.yml  workstation-macosx.yml
roles/: .gitignore
roles/airtonix.apps/adb/tasks/: main.yml
roles/airtonix.apps/bash/tasks/: main.yml
roles/airtonix.apps/caffeine/meta/: main.yml
roles/airtonix.apps/caffeine/tasks/: install-with-homebrew.yml
roles/airtonix.apps/dotfiles/tasks/: main.yml
roles/airtonix.apps/firefox/meta/: main.yml
roles/airtonix.apps/firefox/vars/: main.yml
roles/airtonix.apps/git/files/: .gitconfig
roles/airtonix.apps/git/tasks/: install-on-macosx.yml
roles/airtonix.apps/go-task/tasks/: main.yml
roles/airtonix.apps/ledgerlive/tasks/: main-macosx.yml
roles/airtonix.apps/mailspring/tasks/: main.yml
roles/airtonix.apps/mkdkr/tasks/: main.yml
roles/airtonix.apps/ms-teams/tasks/: main.yml
roles/airtonix.apps/ms-vscode/meta/: main.yml
roles/airtonix.apps/ms-vscode/tasks/: main.yml  (+1 more)
roles/airtonix.provisioning/setup/: requirements.yml
roles/airtonix.setup/: requirements.yml
roles/airtonix.setup/tasks/: main.yml
(+204 files in other folders)
