[tool.poetry]
name = "boxfiles"
version = "0.1.0"
description = ""
authors = ["Zenobius Jiricek <airtonix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yamllint = "^1.26.3"
ansible-lint = "^5.1.3"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
