[tool.poetry]
name = "boxfiles"
version = "0.1.0"
description = ""
authors = ["Zenobius Jiricek <airtonix@users.noreply.github.com>"]

[tool.poe.tasks]
provision-server = """
ansible-playbook
    --verbose
    --ask-become-pass
    --ask-vault-pass
    --inventory-file=./inventory/home-server.yaml
    ./playbooks/server-home-automation.yml
"""
provision = """
ansible-playbook
    --verbose
    --ask-vault-pass
"""

[tool.poetry.dependencies]
python = "^3.9"
yamllint = "^1.26.3"
ansible-lint = "^5.1.3"
docker = "^5.0.3"
ansible = "^4.7.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
